--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@google-cloud/storage": "^7.10.0",
     "aws-sdk": "^2.1603.0",
     "body-parser": "^1.20.2",
+    "connect-mongodb-session": "^5.0.0",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "googleapis": "^137.1.0",
+    "helmet": "^7.1.0",
     "ioredis": "^5.4.1",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
