--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/storage": "^7.10.0",
     "aws-sdk": "^2.1603.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^5.1.0",
     "connect-mongodb-session": "^5.0.0",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
